# solhub

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  IDEA.md  README.md  package-lock.json  package.json  tsconfig.json
api/: Cargo.toml
api/src/: app.rs  error.rs  lib.rs  main.rs  payment.rs  state.rs  types.rs
api/src/middleware/: auth.rs  rate_limit.rs
api/src/routes/: analytics.rs  credits.rs  execute.rs  hub.rs  mod.rs  orgs.rs  runs.rs  webhooks.rs  workflows.rs
api/tests/: approval.rs  credits.rs  integration.rs  x402.rs
cli/: Cargo.toml
cli/src/: client.rs  config.rs  main.rs
cli/src/commands/: auth.rs  billing.rs  config_cmd.rs  execute.rs  mod.rs  run.rs  workflow.rs  x402.rs
cli/tests/: cli_tests.rs
db/: Cargo.toml
db/src/: credits.rs  error.rs  lib.rs  models.rs  orgs.rs  payments.rs  runs.rs  workflows.rs
deployments/: devnet.json
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-05-11-solhub-mvp.md  2026-05-11-solhub-phase-a-foundation.md  2026-05-11-solhub-phase-b-readonly-screens.md  2026-05-11-solhub-phase-c-mutations-builder.md  2026-05-11-solhub-phase-d-wallet.md  2026-05-11-solhub-phase-e-remaining-screens.md
docs/superpowers/specs/: 2026-05-11-solhub-frontend-design.md
engine/: Cargo.toml
engine/src/: config.rs  lib.rs  main.rs
engine/src/executor/: mod.rs  retry.rs  rpc_submit.rs  simulator.rs  tip_calculator.rs  worker.rs
engine/src/executor/bundle_builder/: jito.rs  mod.rs
engine/src/geyser/: mod.rs  router.rs  shredstream.rs  yellowstone.rs
engine/src/plugins/: drift.rs  fear_greed.rs  jupiter.rs  kamino.rs  llm.rs  marinade.rs  mod.rs  news.rs  orca.rs  portfolio.rs  pyth.rs  raydium.rs  solhub.rs  system.rs  test_plugin.rs
engine/src/plugins/notifications/: discord.rs  telegram.rs
engine/src/state/: mod.rs  run.rs  workflow.rs
engine/src/trigger/: account_watch.rs  cron.rs  mod.rs  scheduler.rs  webhook.rs
engine/src/wallet/: agentic.rs  local.rs  mod.rs  turnkey.rs
engine/tests/: approval_gate.rs  batch_transfer.rs  devnet_batch.rs  devnet_transfer.rs  executor.rs  llm_live.rs  news_live.rs  retry_router.rs  scheduler.rs  system_plugin.rs
idl/: condition_oracle.json  execution_vault.json  workflow_registry.json
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: api.test.ts  api.ts  index.ts  types.ts
mcp-server/src/tools/: call_program.ts  create_workflow.test.ts  create_workflow.ts  get_balance.test.ts  get_balance.ts  get_run_status.ts  list_workflows.test.ts  list_workflows.ts  publish_to_hub.ts  trigger_workflow.test.ts  trigger_workflow.ts
migrations/: 20260511000001_organizations.sql  20260511000002_api_keys.sql  20260511000003_workflows.sql  20260511000004_workflow_runs.sql  20260512000001_payments.sql  20260512000002_credits.sql  20260512000003_resume_index.sql
programs/condition-oracle/: Cargo.toml
programs/condition-oracle/src/: lib.rs
programs/execution-vault/: Cargo.toml
programs/execution-vault/src/: lib.rs
programs/workflow-registry/: Cargo.toml
programs/workflow-registry/src/: lib.rs
tests/anchor/: condition-oracle.ts  execution-vault.ts  workflow-registry.ts
tests/e2e/: api_full_suite.sh  batch_transfer_e2e.sh  complex_workflow.sh  devnet_e2e.sh  mcp_and_sse.sh  rebalancer_combined.sh  rebalancer_nodes.sh  subworkflow_e2e.sh  x402_demo.sh  x402_full_e2e.sh
web/: .env.example  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(app)/: layout.tsx
web/src/app/(app)/ai/: page.tsx
web/src/app/(app)/dashboard/: page.tsx
web/src/app/(app)/marketplace/: page.tsx
web/src/app/(app)/marketplace/[id]/: page.tsx
web/src/app/(app)/runs/: page.tsx
web/src/app/(app)/runs/[run_id]/: page.tsx
web/src/app/(app)/settings/: page.tsx
web/src/app/(app)/versions/: page.tsx
web/src/app/(app)/wallet/: page.tsx
web/src/app/(app)/workflows/: page.tsx
web/src/app/(app)/workflows/[id]/: page.tsx
web/src/app/(auth)/: layout.tsx
web/src/app/(auth)/login/: login.test.tsx  page.tsx
web/src/components/: Providers.tsx
web/src/components/dashboard/: KpiCard.tsx  RecentList.tsx
web/src/components/marketplace/: PaymentDialog.tsx  PlaybookCard.tsx
web/src/components/primitives/: Btn.tsx  Icon.test.tsx  Icon.tsx  Kbd.tsx  Pill.tsx  SolanaMark.tsx  SolhubLogo.tsx  logo.test.tsx  primitives.test.tsx
web/src/components/runs/: LiveLogStream.tsx  RunRow.tsx  RunStatusPill.tsx  StepTimeline.tsx
web/src/components/settings/: ApiKeyList.tsx  CreateApiKeyDialog.tsx
web/src/components/shell/: Breadcrumb.tsx  Sidebar.test.tsx  Sidebar.tsx  Topbar.tsx  shell.test.tsx
web/src/components/wallet/: BalanceCard.tsx  ConnectButton.tsx  DepositDialog.tsx  NetworkChip.tsx  WithdrawDialog.tsx
web/src/components/workflow/: StatusPill.tsx  WorkflowRow.test.tsx  WorkflowRow.tsx
web/src/components/workflow/builder/: BuilderShell.tsx  Canvas.tsx  Inspector.tsx  StepNode.tsx  ToolPalette.test.tsx  ToolPalette.tsx  WorkflowPicker.test.tsx  WorkflowPicker.tsx  ZodForm.test.tsx  ZodForm.tsx
web/src/lib/ai/: prompt-to-graph.test.ts  prompt-to-graph.ts
web/src/lib/anchor/: deposit.ts  programs.ts
web/src/lib/api/: analytics.ts  api.test.ts  client.test.ts  client.ts  hub.test.ts  hub.ts  index.ts  orgs.ts  runs.ts  schemas.test.ts  schemas.ts  workflows.ts
web/src/lib/auth/: use-auth.test.tsx  use-auth.ts
web/src/lib/hooks/: hooks.test.tsx  use-analytics.ts  use-api-keys.ts  use-balances.test.tsx  use-balances.ts  use-draft.test.ts  use-draft.ts  use-hub.ts  use-org.ts  use-run-stream.test.tsx  use-run-stream.ts  use-runs.ts  use-workflow-mutations.test.tsx  use-workflow-mutations.ts  use-workflows.ts
web/src/lib/plugins/: examples.test.ts  examples.ts  registry.test.ts  registry.ts  types.ts
web/src/lib/solana/: connection.test.ts  connection.ts  wallet-provider.tsx  x402.ts
web/src/lib/utils/: cn.test.ts  format.test.ts  format.ts
web/src/test/: setup.ts
(+1 files in other folders)
