[workspace]
resolver = "2"
members = [
    "programs/workflow-registry",
    "programs/execution-vault",
    "programs/condition-oracle",
    "engine",
    "api",
    "cli",
    "db",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anchor-lang = "0.31"
anchor-spl = "0.31"
solana-sdk = "2"
solana-client = "2"
solana-program = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
bincode = "1"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"

[profile.release]
overflow-checks = true
