[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "solhub-api"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
async-stream = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
constant_time_eq = "0.3"
db = { path = "../db" }
engine = { path = "../engine" }

[dev-dependencies]
mockito = "1"
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
