[package]
name = "db"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "db"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
