[package]
name = "condition-oracle"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "condition_oracle"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { workspace = true }
