[package]
name = "execution-vault"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "execution_vault"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = ["init-if-needed"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
